--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,177 +1,162 @@
 name: Deploy to DigitalOcean
 
 on:
- push:
-   branches: [ main ]
- workflow_dispatch:
+  push:
+    branches: [ main ]
+  workflow_dispatch:
 
 env:
- NODE_VERSION: 18
+  NODE_VERSION: 18
 
 jobs:
- deploy:
-   runs-on: ubuntu-latest
-   steps:
-     - uses: actions/checkout@v4
-     
-     - name: Setup Node.js
-       uses: actions/setup-node@v4
-       with:
-         node-version: ${{ env.NODE_VERSION }}
-         
-     - name: Debug Directory Structure
-       run: |
-         echo "Current working directory: $PWD"
-         echo "Directory contents:"
-         ls -la
-         
-     - name: Install Dependencies
-       run: |
-         echo "Current directory: $PWD"
-         echo "Directory contents:"
-         ls -la
-         npm ci
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          
+      - name: Install Dependencies
+        run: |
+          echo "Installing dependencies in: $PWD"
+          npm ci
+          
+      - name: Create env file
+        run: |
+          touch .env
+          echo "PORT=10000" >> .env
+          echo "SUPABASE_URL=${{ secrets.SUPABASE_URL }}" >> .env
+          echo "SUPABASE_SERVICE_ROLE_KEY=${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}" >> .env
+          echo "NODE_ENV=production" >> .env
+        
+      - name: Build Application
+        run: |
+          echo "Building application in: $PWD"
+          npm run build
+          echo "Build complete. Contents of dist:"
+          ls -la dist/
 
-     - name: Create env file
-       run: |
-         touch .env
-         echo "PORT=10000" >> .env
-         echo "SUPABASE_URL=${{ secrets.SUPABASE_URL }}" >> .env
-         echo "SUPABASE_SERVICE_ROLE_KEY=${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}" >> .env
-         echo "NODE_ENV=production" >> .env
-       
-     - name: Build Application
-       run: |
-         echo "Building application in directory: $PWD"
-         npm run build
-         echo "Build complete. Contents of dist:"
-         ls -la dist/
-         echo "Contents of dist/app.js:"
-         cat dist/app.js || echo "app.js not found!"
+      - name: Setup SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "Setting up SSH key..."
+          echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/deploy_key
+          chmod 600 ~/.ssh/deploy_key
+          ssh-keyscan -H 161.35.137.136 >> ~/.ssh/known_hosts
 
-     - name: Debug SSH Setup
-       run: |
-         mkdir -p ~/.ssh
-         echo "Setting up SSH key..."
-         echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/deploy_key
-         chmod 600 ~/.ssh/deploy_key
-         ssh-keyscan -H 161.35.137.136 >> ~/.ssh/known_hosts
+      - name: Deploy to DigitalOcean
+        run: |
+          # First, ensure the target directory exists
+          ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no nodejs@161.35.137.136 << 'EOSSH'
+            sudo mkdir -p /var/www/video-processor
+            sudo chown -R nodejs:nodejs /var/www/video-processor
+            mkdir -p /var/www/video-processor/logs
+            chmod 777 /var/www/video-processor/logs
+          EOSSH
+          
+          # Sync files
+          rsync -azv --delete \
+            -e "ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no" \
+            --exclude='.git*' \
+            --exclude='node_modules' \
+            --exclude='src' \
+            --exclude='.env' \
+            ./ \
+            nodejs@161.35.137.136:/var/www/video-processor/
 
-     - name: Deploy to DigitalOcean
-       run: |
-         echo "Starting rsync from directory: $PWD"
-         # First, ensure the target directory exists and set permissions
-         ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no nodejs@161.35.137.136 << 'EOSSH'
-           sudo mkdir -p /var/www/video-processor
-           sudo chown -R nodejs:nodejs /var/www/video-processor
-           mkdir -p /var/www/video-processor/logs
-           chmod 777 /var/www/video-processor/logs
-         EOSSH
-         
-         # Sync all files including dist directory
-         rsync -azv --delete \
-           -e "ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no" \
-           --exclude='.git*' \
-           --exclude='node_modules' \
-           --exclude='src' \
-           --exclude='.env' \
-           ./ \
-           nodejs@161.35.137.136:/var/www/video-processor/
+          # Setup and start application
+          ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no nodejs@161.35.137.136 << 'EOSSH'
+            cd /var/www/video-processor
+            
+            echo "Setting up environment..."
+            export NODE_ENV=production
+            export DEBUG=express:*,app:*,video-processor:*
+            
+            echo "Checking Node.js installation..."
+            node --version
+            npm --version
+            
+            echo "Installing production dependencies..."
+            sed -i 's/"postinstall": "npm run build"//' package.json || true
+            npm ci --omit=dev
+            
+            echo "Setting up PM2..."
+            npm install pm2@latest -g
+            
+            echo "Verifying dist directory..."
+            ls -la dist/
+            
+            echo "Setting up directories and permissions..."
+            mkdir -p logs .pm2
+            chmod 777 logs .pm2
+            sudo chown -R nodejs:nodejs .
+            
+            echo "Configuring firewall..."
+            sudo ufw allow 10000/tcp || true
+            
+            echo "Starting application with PM2..."
+            export PM2_HOME="/var/www/video-processor/.pm2"
+            
+            # Stop existing processes
+            pm2 delete all || true
+            
+            # Start with full logging
+            pm2 start ecosystem.config.js \
+              --time \
+              --log logs/combined.log \
+              --error logs/error.log \
+              --output logs/output.log
+            
+            echo "Checking startup logs..."
+            tail -n 50 logs/*.log || true
+            
+            echo "Process status:"
+            ps aux | grep node
+            sudo lsof -i :10000 || true
+            
+            echo "PM2 process list:"
+            pm2 list
+            
+            echo "Saving PM2 process list..."
+            pm2 save
+          EOSSH
 
-         ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no nodejs@161.35.137.136 << 'EOSSH'
-           cd /var/www/video-processor
-           echo "Current directory contents:"
-           ls -la
-           
-           echo "Setting up permissions..."
-           sudo chown -R nodejs:nodejs /var/www/video-processor
-           
-           echo "Configuring firewall..."
-           sudo ufw allow 10000/tcp || true
-           sudo ufw status | grep 10000 || true
-           
-           echo "Installing dependencies..."
-           npm install pm2@latest || npm install pm2 --save
-           PATH="$PATH:./node_modules/.bin"
-           
-           echo "Installing production dependencies..."
-           # Remove the postinstall script before installing
-           sed -i 's/"postinstall": "npm run build"//' package.json
-           npm ci --omit=dev
-           
-           echo "Setting up directories..."
-           mkdir -p logs
-           chmod 777 logs
-           mkdir -p .pm2
-           chmod 777 .pm2
-           
-           echo "Starting application with PM2..."
-           export PM2_HOME="/var/www/video-processor/.pm2"
-           export DEBUG=express:*,app:*,video-processor:*
-           export NODE_DEBUG=*
-           export NODE_ENV=production
-           
-           echo "Stopping any existing processes..."
-           ./node_modules/.bin/pm2 delete all || true
-           
-           echo "Starting server with full logging..."
-           ./node_modules/.bin/pm2 start ecosystem.config.js \
-             --no-daemon \
-             --no-autorestart \
-             --time \
-             --log logs/combined.log \
-             --error logs/error.log \
-             --output logs/output.log | tee startup.log
-           
-           echo "Process status:"
-           ps aux | grep node || true
-           
-           echo "Network status:"
-           sudo netstat -tulpn | grep LISTEN || true
-           sudo lsof -i :10000 || true
-           
-           echo "Application logs:"
-           tail -n 50 logs/*.log || true
-           
-           echo "PM2 status:"
-           ./node_modules/.bin/pm2 list
-           
-           echo "Environment variables:"
-           env | grep -E 'NODE_|PORT|PM2' || true
-           
-           echo "Directory structure:"
-           ls -R || true
-         EOSSH
+      - name: Verify Deployment
+        run: |
+          echo "Waiting for application to start..."
+          sleep 10
+          for i in {1..5}; do
+            echo "Attempt $i of 5..."
+            if curl -s -f -m 10 http://161.35.137.136:10000/; then
+              echo "Successfully connected to application"
+              break
+            else
+              echo "Connection failed. Checking logs..."
+              ssh -i ~/.ssh/deploy_key nodejs@161.35.137.136 "tail -n 50 /var/www/video-processor/logs/*.log"
+              if [ $i -lt 5 ]; then
+                echo "Waiting before next attempt..."
+                sleep 10
+              fi
+            fi
+          done
 
-     - name: Verify Deployment
-       run: |
-         echo "Waiting for application to start..."
-         sleep 30
-         for i in {1..5}; do
-           echo "Attempt $i of 5..."
-           curl -v --fail --max-time 30 http://161.35.137.136:10000 || {
-             echo "Checking server logs..."
-             ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no nodejs@161.35.137.136 "tail -n 50 /var/www/video-processor/logs/*.log"
-             echo "Waiting before next attempt..."
-             sleep 10
-           }
-         done
-         echo "Deployment verification completed"
+      - name: Notify on Success
+        if: success()
+        uses: slackapi/slack-github-action@v1.24.0
+        with:
+          channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
+          slack-message: "✅ Successfully deployed video-processor to production"
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
 
-     - name: Notify on Success
-       if: success()
-       uses: slackapi/slack-github-action@v1.24.0
-       with:
-         channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
-         slack-message: "✅ Successfully deployed video-processor to production"
-       env:
-         SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-
-     - name: Notify on Failure
-       if: failure()
-       uses: slackapi/slack-github-action@v1.24.0
-       with:
-         channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
-         slack-message: "❌ Failed to deploy video-processor to production"
-       env:
-         SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+      - name: Notify on Failure
+        if: failure()
+        uses: slackapi/slack-github-action@v1.24.0
+        with:
+          channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
+          slack-message: "❌ Failed to deploy video-processor to production"
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
