--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.21.2",
     "fluent-ffmpeg": "^2.1.3",
     "multer": "^1.4.5-lts.1",
+    "prom-client": "^15.1.0",
     "react": "^18.2.0",
     "winston": "^3.17.0"
   },
