--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3",
     "vite": "^6.0.7"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
