Adjust for type declaration

--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@types/cors": "^2.8.17",
     "@types/fluent-ffmpeg": "^2.1.27",
-    "@types/multer": "^1.4.12",
     "@types/react": "^18.2.55",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -27,7 +26,9 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@supabase/supabase-js": "^2.48.1",
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
     "@vitejs/plugin-react": "^4.3.4",
     "ts-node-dev": "^2.0.0",
